fix z-index error of children overflowing from left sidebar #75

--- a/assets/mikio.less
+++ b/assets/mikio.less
@@ -769,6 +769,7 @@ body {
     &.mikio-sidebar-left {
         border-left-width: 0;
         border-right: 1px solid var(--sidebar-border-color);
+        z-index: 1001;
     }
 
     &.mikio-sidebar-right {
